# mkdocstringsdummy

./: .flake8  .gitattributes  .gitignore  Makefile  README.md  coverage.ini  mkdocs.yml  pyproject.toml  pytest.ini
docs/reference/: gss.md
src/mkdocstringsdummy/: gss.py
