[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool]
[tool.poetry]
name = "mkdocstringsdummy"
version = "0.1.0"
description = "Package for mkdocstrings Dummy Testing"
authors = ["Kilian"]
readme = "README.md"
packages = [ {include = "mkdocstringsdummy", from="src"} ]
include = [
    "README.md",
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = "^3.6"
nltk = "*"
wasabi = "*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "==18.9b0"
coverage =  { version = "^5.0", allow-prereleases = true }
jinja2-cli = "^0.7.0"
pytest = "*"
pytest-cov = "*"
pytest-sugar = "*"
pytest-xdist = "*"
setuptools = "*"
pylint = "^2.4.4"
flake8 = "^3.7.9"
isort = "*"
safety = "*"
rope = "*"
jedi = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "^0.7"
toml = "^0.10.0"

[tool.poetry.plugins."mkdocs.plugins"]
mkdocstrings = "mkdocstrings.plugin:MkdocstringsPlugin"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap=0
use_parentheses=true
ensure_newline_before_comments=true
force_single_line = false
balanced_wrapping = true
known_first_party = "mkdocstringsdummy"

[tool.pylint.options]
max-line-length = "99"
